--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -8,7 +8,7 @@
 	justify-content: space-evenly;
 	align-content: center;
 	/* background: blue; */
-	height: 100%;
+	/* height: 100%; */
 	min-height: 100%;
 	min-width: 100%;
 }
