--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,30 +1,31 @@
 .App,
 #root {
 	margin: 0;
-	font-family: sans-serif;
+	/* font-family: sans-serif; */
 	text-align: center;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;
 	align-content: center;
-	/* background: blue; */
-	/* height: 100%; */
 	min-height: 100%;
 	min-width: 100%;
 }
+
+/* Network Graph */
 .vis-network * {
 	margin: 0px;
-	/* background: #303030; */
-	/* border: black solid 1px; */
-	/* min-height: 70vh; */
-	/* color: 'white'; */
 	width: 99% !important;
 	height: 500px !important;
 }
+
+/* Donation link in footer; blend mode changed to contrast w/ dark mode */
+#eth-donate {
+	text-decoration: none;
+	mix-blend-mode: difference;
+}
+
 html,
 body {
 	height: 100vh;
-	/* min-height: 100vh; */
-	/* min-width: 99%; */
 	margin: 0;
 }
